--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <h3>Option 2: Using Garmin Express on PC or Mac</h3>
     <ol>
-      <li>Install <a href="https://www.garmin.com/express" target="_blank">Garmin Express</a> on your computer.</li>
+      <li>Install Garmin Express on your computer.</li>
       <li>Connect your Forerunner 235 to the computer using the charging/data cable.</li>
       <li>Launch Garmin Express and let it detect your device.</li>
       <li>If an update is available, click “Install” and follow the prompts.</li>
